# Xallve

./: CMakeLists.txt  LICENSE  README.md  install_deps.sh
include/: block.hpp  block_data.hpp  hash.hpp  timestamp.hpp
src/: block.cpp  block.hpp  block_data.cpp  hash.cpp  keypair.cpp  keypair.hpp  keypairerrors.cpp  main.cpp  pubkey.cpp  pubkey.hpp  timestamp.cpp
src/crypto/: ed25519.h  fixedint.h  sha512.c  sha512.h
